--- a/styles/style.css
+++ b/styles/style.css
@@ -899,8 +899,7 @@ body {
 }
 
 /* line 184, D:/work/dat/conduit/sass/viewer.scss */
-.article-view #date {
-  color: #bdbdbd;
+.article-view #id {
   font-size: 14px;
   line-height: 18px;
   position: absolute;
@@ -908,7 +907,12 @@ body {
   bottom: 15px;
 }
 
-/* line 195, D:/work/dat/conduit/sass/viewer.scss */
+/* line 190, D:/work/dat/conduit/sass/viewer.scss */
+.article-view #id a {
+  color: #bdbdbd;
+}
+
+/* line 197, D:/work/dat/conduit/sass/viewer.scss */
 #action-area {
   position: absolute;
   right: 0;
@@ -920,7 +924,7 @@ body {
   display: inline-block;
 }
 
-/* line 208, D:/work/dat/conduit/sass/viewer.scss */
+/* line 210, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn {
   height: 36px;
   background: transparent;
@@ -930,23 +934,23 @@ body {
   font-weight: 700;
 }
 
-/* line 218, D:/work/dat/conduit/sass/viewer.scss */
+/* line 220, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-default {
   color: #212121;
 }
 
-/* line 222, D:/work/dat/conduit/sass/viewer.scss */
+/* line 224, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-default:hover,
 #action-area .btn-default:focus {
   background: rgba(33, 33, 33, 0.12);
 }
 
-/* line 227, D:/work/dat/conduit/sass/viewer.scss */
+/* line 229, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-primary {
   color: #009688;
 }
 
-/* line 231, D:/work/dat/conduit/sass/viewer.scss */
+/* line 233, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-primary:hover,
 #action-area .btn-primary:focus,
 #action-area .btn-primary:active,
@@ -955,7 +959,7 @@ body {
   box-shadow: none;
 }
 
-/* line 239, D:/work/dat/conduit/sass/viewer.scss */
+/* line 241, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .dropdown-menu.open {
   position: relative;
   top: -350%;
@@ -971,7 +975,7 @@ body {
   z-index: 101;
 }
 
-/* line 254, D:/work/dat/conduit/sass/viewer.scss */
+/* line 256, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-group.open .dropdown-toggle {
   width: 100% !important;
   min-width: initial !important;
@@ -997,7 +1001,7 @@ body {
 #overflow-menu:hover {
 	background: lighten($colorGrey, 20%);
 }*/
-/* line 279, D:/work/dat/conduit/sass/viewer.scss */
+/* line 281, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-btn {
   position: absolute;
   top: 10px;
@@ -1014,12 +1018,12 @@ body {
   vertical-align: middle;
 }
 
-/* line 295, D:/work/dat/conduit/sass/viewer.scss */
+/* line 297, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .caret {
   visibility: hidden;
 }
 
-/* line 299, D:/work/dat/conduit/sass/viewer.scss */
+/* line 301, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper .form-control {
   box-shadow: none;
   -webkit-box-shadow: none;
@@ -1029,19 +1033,19 @@ body {
   right: 0;
 }
 
-/* line 308, D:/work/dat/conduit/sass/viewer.scss */
+/* line 310, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper .edit-field.form-control {
   width: 100% !important;
 }
 
-/* line 312, D:/work/dat/conduit/sass/viewer.scss */
+/* line 314, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:after {
   font-family: "Glyphicons Halflings";
   content: '\e235';
   margin-left: -.25em;
 }
 
-/* line 318, D:/work/dat/conduit/sass/viewer.scss */
+/* line 320, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle {
   position: absolute;
   top: 10px;
@@ -1061,20 +1065,20 @@ body {
   box-shadow: none;
 }
 
-/* line 338, D:/work/dat/conduit/sass/viewer.scss */
+/* line 340, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:hover {
   cursor: pointer;
   background-color: #f0f0f0;
 }
 
-/* line 343, D:/work/dat/conduit/sass/viewer.scss */
+/* line 345, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:active,
 #overflow-menu .btn.btn-default.dropdown-toggle:focus {
   cursor: pointer;
   background-color: #e3e3e3;
 }
 
-/* line 349, D:/work/dat/conduit/sass/viewer.scss */
+/* line 351, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .dropdown-menu.open {
   position: relative;
   top: 30px;
@@ -1090,7 +1094,7 @@ body {
   z-index: 101;
 }
 
-/* line 364, D:/work/dat/conduit/sass/viewer.scss */
+/* line 366, D:/work/dat/conduit/sass/viewer.scss */
 #righoverflow-menut .nya-bs-select.btn-group .dropdown-menu {
   width: 100% !important;
   min-width: initial !important;
