--- a/templates/comments-popover.html
+++ b/templates/comments-popover.html
@@ -2,7 +2,7 @@
 	<div class="all-comments-wrapper">
         <div ng-repeat="comment in articles[currentIndex].comments track by comment.date" class="comments-wrapper">
             <div class="info-wrapper" ng-class="{'self': comment.user == username}">
-                <div class="name">{{comment.user}}</div>
+                <div class="name">{{comment.user.given_name || comment.user.id}}</div>
                 <div class="time-stamp">{{comment.date}}</div>
             </div>
             <div class="well well-sm" ng-class="{'self': comment.user == username}">{{comment.text}}</div>	
