--- a/styles/style.css
+++ b/styles/style.css
@@ -900,6 +900,7 @@ body {
 
 /* line 184, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #id {
+  color: #bdbdbd;
   font-size: 14px;
   line-height: 18px;
   position: absolute;
@@ -907,12 +908,12 @@ body {
   bottom: 15px;
 }
 
-/* line 190, D:/work/dat/conduit/sass/viewer.scss */
+/* line 191, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #id a {
   color: #bdbdbd;
 }
 
-/* line 197, D:/work/dat/conduit/sass/viewer.scss */
+/* line 198, D:/work/dat/conduit/sass/viewer.scss */
 #action-area {
   position: absolute;
   right: 0;
@@ -924,7 +925,7 @@ body {
   display: inline-block;
 }
 
-/* line 210, D:/work/dat/conduit/sass/viewer.scss */
+/* line 211, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn {
   height: 36px;
   background: transparent;
@@ -934,23 +935,23 @@ body {
   font-weight: 700;
 }
 
-/* line 220, D:/work/dat/conduit/sass/viewer.scss */
+/* line 221, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-default {
   color: #212121;
 }
 
-/* line 224, D:/work/dat/conduit/sass/viewer.scss */
+/* line 225, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-default:hover,
 #action-area .btn-default:focus {
   background: rgba(33, 33, 33, 0.12);
 }
 
-/* line 229, D:/work/dat/conduit/sass/viewer.scss */
+/* line 230, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-primary {
   color: #009688;
 }
 
-/* line 233, D:/work/dat/conduit/sass/viewer.scss */
+/* line 234, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-primary:hover,
 #action-area .btn-primary:focus,
 #action-area .btn-primary:active,
@@ -959,7 +960,7 @@ body {
   box-shadow: none;
 }
 
-/* line 241, D:/work/dat/conduit/sass/viewer.scss */
+/* line 242, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .dropdown-menu.open {
   position: relative;
   top: -350%;
@@ -975,7 +976,7 @@ body {
   z-index: 101;
 }
 
-/* line 256, D:/work/dat/conduit/sass/viewer.scss */
+/* line 257, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-group.open .dropdown-toggle {
   width: 100% !important;
   min-width: initial !important;
@@ -1001,7 +1002,7 @@ body {
 #overflow-menu:hover {
 	background: lighten($colorGrey, 20%);
 }*/
-/* line 281, D:/work/dat/conduit/sass/viewer.scss */
+/* line 282, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-btn {
   position: absolute;
   top: 10px;
@@ -1018,12 +1019,12 @@ body {
   vertical-align: middle;
 }
 
-/* line 297, D:/work/dat/conduit/sass/viewer.scss */
+/* line 298, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .caret {
   visibility: hidden;
 }
 
-/* line 301, D:/work/dat/conduit/sass/viewer.scss */
+/* line 302, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper .form-control {
   box-shadow: none;
   -webkit-box-shadow: none;
@@ -1033,19 +1034,19 @@ body {
   right: 0;
 }
 
-/* line 310, D:/work/dat/conduit/sass/viewer.scss */
+/* line 311, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper .edit-field.form-control {
   width: 100% !important;
 }
 
-/* line 314, D:/work/dat/conduit/sass/viewer.scss */
+/* line 315, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:after {
   font-family: "Glyphicons Halflings";
   content: '\e235';
   margin-left: -.25em;
 }
 
-/* line 320, D:/work/dat/conduit/sass/viewer.scss */
+/* line 321, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle {
   position: absolute;
   top: 10px;
@@ -1065,20 +1066,20 @@ body {
   box-shadow: none;
 }
 
-/* line 340, D:/work/dat/conduit/sass/viewer.scss */
+/* line 341, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:hover {
   cursor: pointer;
   background-color: #f0f0f0;
 }
 
-/* line 345, D:/work/dat/conduit/sass/viewer.scss */
+/* line 346, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:active,
 #overflow-menu .btn.btn-default.dropdown-toggle:focus {
   cursor: pointer;
   background-color: #e3e3e3;
 }
 
-/* line 351, D:/work/dat/conduit/sass/viewer.scss */
+/* line 352, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .dropdown-menu.open {
   position: relative;
   top: 30px;
@@ -1094,7 +1095,7 @@ body {
   z-index: 101;
 }
 
-/* line 366, D:/work/dat/conduit/sass/viewer.scss */
+/* line 367, D:/work/dat/conduit/sass/viewer.scss */
 #righoverflow-menut .nya-bs-select.btn-group .dropdown-menu {
   width: 100% !important;
   min-width: initial !important;
