Moved xeditable buttons to action area

--- a/sass/viewer.scss
+++ b/sass/viewer.scss
@@ -55,7 +55,8 @@ $actPadding: 8px;
 
 .article-view .text.edit-field {
 	padding: $lrpadding;
-	height: 50vh;
+    height: 24em;
+    margin-top: 5em;;
 }
 
 .article-view #title-wrapper {
