--- a/styles/style.css
+++ b/styles/style.css
@@ -760,29 +760,30 @@ body {
 /* line 56, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text.edit-field {
   padding: 15px;
-  height: 50vh;
+  height: 24em;
+  margin-top: 5em;
 }
 
-/* line 61, D:/work/dat/conduit/sass/viewer.scss */
+/* line 62, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #title-wrapper {
   position: relative;
   margin-top: 8px;
   margin: 0 15px;
 }
 
-/* line 68, D:/work/dat/conduit/sass/viewer.scss */
+/* line 69, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .title {
   font-size: 1.5em;
   font-family: 'Montserrat', sans-serif;
 }
 
-/* line 73, D:/work/dat/conduit/sass/viewer.scss */
+/* line 74, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #title-wrapper .edit-field {
   line-height: 1.813em;
   height: 6em;
 }
 
-/* line 78, D:/work/dat/conduit/sass/viewer.scss */
+/* line 79, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper {
   position: relative;
   width: 100%;
@@ -794,7 +795,7 @@ body {
   clear: both;
 }
 
-/* line 88, D:/work/dat/conduit/sass/viewer.scss */
+/* line 89, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper #nav-right {
   position: absolute;
   top: 50%;
@@ -803,7 +804,7 @@ body {
   z-index: 100;
 }
 
-/* line 95, D:/work/dat/conduit/sass/viewer.scss */
+/* line 96, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper #nav-left {
   position: absolute;
   top: 50%;
@@ -812,7 +813,7 @@ body {
   z-index: 100;
 }
 
-/* line 104, D:/work/dat/conduit/sass/viewer.scss */
+/* line 105, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper::before {
   content: '';
   display: inline-block;
@@ -821,7 +822,7 @@ body {
   margin-right: -0.25em;
 }
 
-/* line 112, D:/work/dat/conduit/sass/viewer.scss */
+/* line 113, D:/work/dat/conduit/sass/viewer.scss */
 #image-wrapper .nav-arrow {
   background-color: #009688;
   width: 2.5em;
@@ -837,7 +838,7 @@ body {
   vertical-align: middle;
 }
 
-/* line 132, D:/work/dat/conduit/sass/viewer.scss */
+/* line 133, D:/work/dat/conduit/sass/viewer.scss */
 #image-wrapper .nav-arrow:hover {
   cursor: pointer;
   background-color: #00796b;
@@ -845,12 +846,12 @@ body {
   transition: box-shadow .25s ease-in-out;
 }
 
-/* line 139, D:/work/dat/conduit/sass/viewer.scss */
+/* line 140, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper .greyout {
   visibility: hidden;
 }
 
-/* line 143, D:/work/dat/conduit/sass/viewer.scss */
+/* line 144, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .article-image {
   display: inline-block;
   margin: auto;
@@ -858,26 +859,26 @@ body {
   text-align: center;
 }
 
-/* line 150, D:/work/dat/conduit/sass/viewer.scss */
+/* line 151, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .article-image .image {
   width: 100%;
   max-height: 50vh;
   vertical-align: middle;
 }
 
-/* line 156, D:/work/dat/conduit/sass/viewer.scss */
+/* line 157, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-load-error {
   color: #ff5252;
 }
 
-/* line 160, D:/work/dat/conduit/sass/viewer.scss */
+/* line 161, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text-wrapper {
   margin: 0 15px 15px 15px;
   position: relative;
   top: 30px;
 }
 
-/* line 166, D:/work/dat/conduit/sass/viewer.scss */
+/* line 167, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text {
   display: block;
   font-size: 1.125em;
@@ -886,19 +887,19 @@ body {
   white-space: pre-line;
 }
 
-/* line 174, D:/work/dat/conduit/sass/viewer.scss */
+/* line 175, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .edit-field {
   padding: 0 1vw;
   width: 100%;
 }
 
-/* line 179, D:/work/dat/conduit/sass/viewer.scss */
+/* line 180, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .editable-buttons {
   float: right;
   margin: 5px 0 75px 0;
 }
 
-/* line 184, D:/work/dat/conduit/sass/viewer.scss */
+/* line 185, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #id {
   color: #bdbdbd;
   font-size: 14px;
@@ -908,12 +909,12 @@ body {
   bottom: 15px;
 }
 
-/* line 191, D:/work/dat/conduit/sass/viewer.scss */
+/* line 192, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #id a {
   color: #bdbdbd;
 }
 
-/* line 198, D:/work/dat/conduit/sass/viewer.scss */
+/* line 199, D:/work/dat/conduit/sass/viewer.scss */
 #action-area {
   position: absolute;
   right: 0;
@@ -925,7 +926,7 @@ body {
   display: inline-block;
 }
 
-/* line 211, D:/work/dat/conduit/sass/viewer.scss */
+/* line 212, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn {
   height: 36px;
   background: transparent;
@@ -935,23 +936,23 @@ body {
   font-weight: 700;
 }
 
-/* line 221, D:/work/dat/conduit/sass/viewer.scss */
+/* line 222, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-default {
   color: #212121;
 }
 
-/* line 225, D:/work/dat/conduit/sass/viewer.scss */
+/* line 226, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-default:hover,
 #action-area .btn-default:focus {
   background: rgba(33, 33, 33, 0.12);
 }
 
-/* line 230, D:/work/dat/conduit/sass/viewer.scss */
+/* line 231, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-primary {
   color: #009688;
 }
 
-/* line 234, D:/work/dat/conduit/sass/viewer.scss */
+/* line 235, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-primary:hover,
 #action-area .btn-primary:focus,
 #action-area .btn-primary:active,
@@ -960,7 +961,7 @@ body {
   box-shadow: none;
 }
 
-/* line 242, D:/work/dat/conduit/sass/viewer.scss */
+/* line 243, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .dropdown-menu.open {
   position: relative;
   top: -350%;
@@ -976,7 +977,7 @@ body {
   z-index: 101;
 }
 
-/* line 257, D:/work/dat/conduit/sass/viewer.scss */
+/* line 258, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-group.open .dropdown-toggle {
   width: 100% !important;
   min-width: initial !important;
@@ -1002,7 +1003,7 @@ body {
 #overflow-menu:hover {
 	background: lighten($colorGrey, 20%);
 }*/
-/* line 282, D:/work/dat/conduit/sass/viewer.scss */
+/* line 283, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-btn {
   position: absolute;
   top: 10px;
@@ -1019,12 +1020,12 @@ body {
   vertical-align: middle;
 }
 
-/* line 298, D:/work/dat/conduit/sass/viewer.scss */
+/* line 299, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .caret {
   visibility: hidden;
 }
 
-/* line 302, D:/work/dat/conduit/sass/viewer.scss */
+/* line 303, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper .form-control {
   box-shadow: none;
   -webkit-box-shadow: none;
@@ -1034,19 +1035,19 @@ body {
   right: 0;
 }
 
-/* line 311, D:/work/dat/conduit/sass/viewer.scss */
+/* line 312, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper .edit-field.form-control {
   width: 100% !important;
 }
 
-/* line 315, D:/work/dat/conduit/sass/viewer.scss */
+/* line 316, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:after {
   font-family: "Glyphicons Halflings";
   content: '\e235';
   margin-left: -.25em;
 }
 
-/* line 321, D:/work/dat/conduit/sass/viewer.scss */
+/* line 322, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle {
   position: absolute;
   top: 10px;
@@ -1066,20 +1067,20 @@ body {
   box-shadow: none;
 }
 
-/* line 341, D:/work/dat/conduit/sass/viewer.scss */
+/* line 342, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:hover {
   cursor: pointer;
   background-color: #f0f0f0;
 }
 
-/* line 346, D:/work/dat/conduit/sass/viewer.scss */
+/* line 347, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:active,
 #overflow-menu .btn.btn-default.dropdown-toggle:focus {
   cursor: pointer;
   background-color: #e3e3e3;
 }
 
-/* line 352, D:/work/dat/conduit/sass/viewer.scss */
+/* line 353, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .dropdown-menu.open {
   position: relative;
   top: 30px;
@@ -1095,7 +1096,7 @@ body {
   z-index: 101;
 }
 
-/* line 367, D:/work/dat/conduit/sass/viewer.scss */
+/* line 368, D:/work/dat/conduit/sass/viewer.scss */
 #righoverflow-menut .nya-bs-select.btn-group .dropdown-menu {
   width: 100% !important;
   min-width: initial !important;
