--- a/styles/style.css
+++ b/styles/style.css
@@ -1000,6 +1000,70 @@ body {
   background: rgba(0, 150, 136, 0.12);
 }
 
+/* line 265, D:/work/dat/conduit/sass/viewer.scss */
+#action-area #version-pagniation {
+  position: absolute;
+  left: 15px;
+  bottom: 7px;
+}
+
+/* line 270, D:/work/dat/conduit/sass/viewer.scss */
+#action-area #version-pagniation .pagination {
+  margin: 0;
+}
+
+/* line 274, D:/work/dat/conduit/sass/viewer.scss */
+#action-area #version-pagniation .pagination > .disabled > a {
+  color: #bdbdbd;
+}
+
+/* line 278, D:/work/dat/conduit/sass/viewer.scss */
+#action-area #version-pagniation .pagination-sm > li:first-child > a {
+  width: auto !important;
+  padding: 0px 5px !important;
+}
+
+/* line 282, D:/work/dat/conduit/sass/viewer.scss */
+#action-area #version-pagniation .pagination-sm > li:first-child > a:hover {
+  border-radius: 2px;
+}
+
+/* line 286, D:/work/dat/conduit/sass/viewer.scss */
+#action-area #version-pagniation .pagination-sm > li:last-child > a {
+  width: auto !important;
+  padding: 0px 5px !important;
+}
+
+/* line 290, D:/work/dat/conduit/sass/viewer.scss */
+#action-area #version-pagniation .pagination-sm > li:last-child > a:hover {
+  border-radius: 2px;
+}
+
+/* line 296, D:/work/dat/conduit/sass/viewer.scss */
+#action-area #version-pagniation .pagination > li > a {
+  width: 2em;
+  height: 2em;
+  line-height: 2em;
+  padding: 0;
+  border: none;
+  border-radius: 50%;
+  text-align: center;
+  margin-right: 3px;
+  color: #009688;
+}
+
+/* line 310, D:/work/dat/conduit/sass/viewer.scss */
+#action-area #version-pagniation .pagination > .active > a {
+  width: 2em;
+  height: 2em;
+  line-height: 2em;
+  padding: 0;
+  border-radius: 50%;
+  text-align: center;
+  background-color: #009688;
+  color: #fff;
+}
+
 /*
 #overflow-menu {
 	position: absolute;
@@ -1018,7 +1082,7 @@ body {
 #overflow-menu:hover {
 	background: lighten($colorGrey, 20%);
 }*/
-/* line 283, D:/work/dat/conduit/sass/viewer.scss */
+/* line 344, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-btn {
   position: absolute;
   top: 10px;
@@ -1035,12 +1099,12 @@ body {
   vertical-align: middle;
 }
 
-/* line 299, D:/work/dat/conduit/sass/viewer.scss */
+/* line 360, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .caret {
   visibility: hidden;
 }
 
-/* line 303, D:/work/dat/conduit/sass/viewer.scss */
+/* line 364, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper .form-control {
   box-shadow: none;
   -webkit-box-shadow: none;
@@ -1050,19 +1114,19 @@ body {
   right: 0;
 }
 
-/* line 312, D:/work/dat/conduit/sass/viewer.scss */
+/* line 373, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper .edit-field.form-control {
   width: 100% !important;
 }
 
-/* line 316, D:/work/dat/conduit/sass/viewer.scss */
+/* line 377, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:after {
   font-family: "Glyphicons Halflings";
   content: '\e235';
   margin-left: -.25em;
 }
 
-/* line 322, D:/work/dat/conduit/sass/viewer.scss */
+/* line 383, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle {
   position: absolute;
   top: 10px;
@@ -1082,20 +1146,20 @@ body {
   box-shadow: none;
 }
 
-/* line 342, D:/work/dat/conduit/sass/viewer.scss */
+/* line 403, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:hover {
   cursor: pointer;
   background-color: #f0f0f0;
 }
 
-/* line 347, D:/work/dat/conduit/sass/viewer.scss */
+/* line 408, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:active,
 #overflow-menu .btn.btn-default.dropdown-toggle:focus {
   cursor: pointer;
   background-color: #e3e3e3;
 }
 
-/* line 353, D:/work/dat/conduit/sass/viewer.scss */
+/* line 414, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .dropdown-menu.open {
   position: relative;
   top: 30px;
@@ -1111,7 +1175,7 @@ body {
   z-index: 101;
 }
 
-/* line 368, D:/work/dat/conduit/sass/viewer.scss */
+/* line 429, D:/work/dat/conduit/sass/viewer.scss */
 #righoverflow-menut .nya-bs-select.btn-group .dropdown-menu {
   width: 100% !important;
   min-width: initial !important;
