--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -7,6 +7,7 @@ $rightWidth: 20vw;
 $centerWidth: (100vw - ($leftWidth + $rightWidth));
 
 $headerHeight: 48px;
+$headerPadding: 5px;
 
 * {
   -webkit-box-sizing: border-box;
@@ -88,7 +89,7 @@ body {
 	float: left;
 	width: 100%;
 	height: $headerHeight;
-	padding: 5px;
+	padding: $headerPadding;
 			
 	/*COLORS*/
 	background: ($colorPrimary);
@@ -126,3 +127,86 @@ body {
 		* html #left {
 			left: 390px;           /* RC fullwidth */
 		}
+
+#menu .caret {
+	visibility: hidden;
+}
+
+#menu .special-title {
+	visibility: hidden;
+}
+
+#menu .btn.btn-default.dropdown-toggle:after {
+	font-family: "Glyphicons Halflings";
+	content:"\e236";
+	margin-left: -.25em;
+
+	position: absolute;
+	left: 14px;
+    font-size: 24px;
+    top: 3px;
+}
+
+#menu .btn.btn-default.dropdown-toggle {
+	position: absolute;
+    left: 10px;
+    z-index: 100;
+    background-color: #009688;
+    width: $headerHeight - ($headerPadding * 2);
+	height: $headerHeight - ($headerPadding * 2);
+	padding: 0;
+    font-size: 1em;
+    color: #fff;
+    text-align: center;
+    justify-content: center;
+    vertical-align: middle;
+    border: none;
+    box-shadow: none;
+}
+
+	#menu .btn.btn-default.dropdown-toggle:hover {
+		cursor: pointer;
+		background-color: darken($colorPrimary, 5%);
+	}
+
+	
+
+	#menu .btn.btn-default.dropdown-toggle:active,
+	#menu .btn.btn-default.dropdown-toggle:focus {
+		cursor: pointer;
+		background-color: darken($colorPrimary, 10%);
+	}
+
+#menu .dropdown-menu.open {
+	position: relative;
+	top: 30px;
+	left: 15%;
+	height: auto;
+	width: 120%;
+	max-height: 25vh;
+	transition: max-height .25s ease-in-out;
+	background-color: #fff;
+	border: none;
+	border-radius: 2px;
+	box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+	z-index: 101;
+}
+
+#menu .dropdown-menu>li>div {
+	padding: 3px 20px;
+	color: $colorGrey;
+}
+
+#header-content-wrapper .form-control {
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    width: auto;
+    position: absolute;
+	left: 0;
+	background-color: transparent;
+}
+
+#righoverflow-menut .nya-bs-select.btn-group .dropdown-menu {
+    width: 100% !important;
+    min-width: initial !important;
+}
