--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,20 +1,20 @@
 /*Layout*/
 /*Light*/
 /*Dark*/
-/* line 11, D:/work/dat/conduit/sass/layout.scss */
+/* line 12, D:/work/dat/conduit/sass/layout.scss */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 17, D:/work/dat/conduit/sass/layout.scss */
+/* line 18, D:/work/dat/conduit/sass/layout.scss */
 html {
   font-size: 100% !important;
   font-family: 'SourceSansPro', sans-serif !important;
 }
 
-/* line 22, D:/work/dat/conduit/sass/layout.scss */
+/* line 23, D:/work/dat/conduit/sass/layout.scss */
 body {
   min-width: 750px;
   /* 2x (LC fullwidth +
@@ -32,7 +32,7 @@ body {
   background-color: #f2f2f2;
 }
 
-/* line 40, D:/work/dat/conduit/sass/layout.scss */
+/* line 41, D:/work/dat/conduit/sass/layout.scss */
 #container {
   position: fixed;
   padding-left: 25vw;
@@ -45,7 +45,7 @@ body {
   background: transparent;
 }
 
-/* line 50, D:/work/dat/conduit/sass/layout.scss */
+/* line 51, D:/work/dat/conduit/sass/layout.scss */
 #container .column {
   position: relative;
   float: left;
@@ -53,7 +53,7 @@ body {
   background: inherit;
 }
 
-/* line 57, D:/work/dat/conduit/sass/layout.scss */
+/* line 58, D:/work/dat/conduit/sass/layout.scss */
 #center {
   padding: 0;
   /* CC padding */
@@ -62,7 +62,7 @@ body {
   float: left;
 }
 
-/* line 64, D:/work/dat/conduit/sass/layout.scss */
+/* line 65, D:/work/dat/conduit/sass/layout.scss */
 #left {
   width: 25vw;
   /* LC width */
@@ -76,7 +76,7 @@ body {
   display: inline-block;
 }
 
-/* line 75, D:/work/dat/conduit/sass/layout.scss */
+/* line 76, D:/work/dat/conduit/sass/layout.scss */
 #right {
   width: 20vw;
   /* RC width */
@@ -91,7 +91,7 @@ body {
   overflow-x: visible;
 }
 
-/* line 86, D:/work/dat/conduit/sass/layout.scss */
+/* line 87, D:/work/dat/conduit/sass/layout.scss */
 #header {
   /*DISPLAY*/
   float: left;
@@ -107,7 +107,7 @@ body {
   box-shadow: 0 0px 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24);
 }
 
-/* line 104, D:/work/dat/conduit/sass/layout.scss */
+/* line 105, D:/work/dat/conduit/sass/layout.scss */
 #header-content-wrapper:before {
   content: '';
   display: inline-block;
@@ -116,7 +116,7 @@ body {
   margin-right: -0.25em;
 }
 
-/* line 112, D:/work/dat/conduit/sass/layout.scss */
+/* line 113, D:/work/dat/conduit/sass/layout.scss */
 #header-content-wrapper {
   display: inline-block;
   vertical-align: middle;
@@ -125,17 +125,107 @@ body {
   text-align: center;
 }
 
-/* line 120, D:/work/dat/conduit/sass/layout.scss */
+/* line 121, D:/work/dat/conduit/sass/layout.scss */
 #header-content {
   display: inline-block;
   vertical-align: middle;
 }
 
 /*** IE Fix ***/
-/* line 126, D:/work/dat/conduit/sass/layout.scss */
+/* line 127, D:/work/dat/conduit/sass/layout.scss */
 * html #left {
   left: 390px;
   /* RC fullwidth */
+}
+
+/* line 131, D:/work/dat/conduit/sass/layout.scss */
+#menu .caret {
+  visibility: hidden;
+}
+
+/* line 135, D:/work/dat/conduit/sass/layout.scss */
+#menu .special-title {
+  visibility: hidden;
+}
+
+/* line 139, D:/work/dat/conduit/sass/layout.scss */
+#menu .btn.btn-default.dropdown-toggle:after {
+  font-family: "Glyphicons Halflings";
+  content: "\e236";
+  margin-left: -.25em;
+  position: absolute;
+  left: 14px;
+  font-size: 24px;
+  top: 3px;
+}
+
+/* line 150, D:/work/dat/conduit/sass/layout.scss */
+#menu .btn.btn-default.dropdown-toggle {
+  position: absolute;
+  left: 10px;
+  z-index: 100;
+  background-color: #009688;
+  width: 38px;
+  height: 38px;
+  padding: 0;
+  font-size: 1em;
+  color: #fff;
+  text-align: center;
+  justify-content: center;
+  vertical-align: middle;
+  border: none;
+  box-shadow: none;
+}
+
+/* line 167, D:/work/dat/conduit/sass/layout.scss */
+#menu .btn.btn-default.dropdown-toggle:hover {
+  cursor: pointer;
+  background-color: #007d71;
+}
+
+/* line 174, D:/work/dat/conduit/sass/layout.scss */
+#menu .btn.btn-default.dropdown-toggle:active,
+#menu .btn.btn-default.dropdown-toggle:focus {
+  cursor: pointer;
+  background-color: #00635a;
+}
+
+/* line 180, D:/work/dat/conduit/sass/layout.scss */
+#menu .dropdown-menu.open {
+  position: relative;
+  top: 30px;
+  left: 15%;
+  height: auto;
+  width: 120%;
+  max-height: 25vh;
+  transition: max-height .25s ease-in-out;
+  background-color: #fff;
+  border: none;
+  border-radius: 2px;
+  box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+  z-index: 101;
+}
+
+/* line 195, D:/work/dat/conduit/sass/layout.scss */
+#menu .dropdown-menu > li > div {
+  padding: 3px 20px;
+  color: #bdbdbd;
+}
+
+/* line 200, D:/work/dat/conduit/sass/layout.scss */
+#header-content-wrapper .form-control {
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  width: auto;
+  position: absolute;
+  left: 0;
+  background-color: transparent;
+}
+
+/* line 209, D:/work/dat/conduit/sass/layout.scss */
+#righoverflow-menut .nya-bs-select.btn-group .dropdown-menu {
+  width: 100% !important;
+  min-width: initial !important;
 }
 
 /*# sourceMappingURL=../styles/layout.map */
