--- a/styles/viewer.css
+++ b/styles/viewer.css
@@ -385,28 +385,13 @@
 }
 
 /* line 364, D:/work/dat/conduit/sass/viewer.scss */
-#content-wrapper .form-control {
-  box-shadow: none;
-  -webkit-box-shadow: none;
-  width: auto;
-  position: absolute;
-  top: 0;
-  right: 0;
-}
-
-/* line 373, D:/work/dat/conduit/sass/viewer.scss */
-#content-wrapper .edit-field.form-control {
-  width: 100% !important;
-}
-
-/* line 377, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:after {
   font-family: "Glyphicons Halflings";
   content: '\e235';
   margin-left: -.25em;
 }
 
-/* line 383, D:/work/dat/conduit/sass/viewer.scss */
+/* line 370, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle {
   position: absolute;
   top: 10px;
@@ -426,20 +411,20 @@
   box-shadow: none;
 }
 
-/* line 403, D:/work/dat/conduit/sass/viewer.scss */
+/* line 390, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:hover {
   cursor: pointer;
   background-color: #f0f0f0;
 }
 
-/* line 408, D:/work/dat/conduit/sass/viewer.scss */
+/* line 395, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:active,
 #overflow-menu .btn.btn-default.dropdown-toggle:focus {
   cursor: pointer;
   background-color: #e3e3e3;
 }
 
-/* line 414, D:/work/dat/conduit/sass/viewer.scss */
+/* line 401, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .dropdown-menu.open {
   position: relative;
   top: 30px;
@@ -455,10 +440,23 @@
   z-index: 101;
 }
 
-/* line 429, D:/work/dat/conduit/sass/viewer.scss */
-#righoverflow-menut .nya-bs-select.btn-group .dropdown-menu {
+/*#righoverflow-menut .nya-bs-select.btn-group .dropdown-menu {
+    width: 100% !important;
+    min-width: initial !important;
+}*/
+/* line 421, D:/work/dat/conduit/sass/viewer.scss */
+#content-wrapper .form-control {
+  box-shadow: none;
+  -webkit-box-shadow: none;
+  width: auto;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+/* line 430, D:/work/dat/conduit/sass/viewer.scss */
+#content-wrapper .edit-field.form-control {
   width: 100% !important;
-  min-width: initial !important;
 }
 
 /*# sourceMappingURL=../styles/viewer.map */
