--- a/styles/stream.css
+++ b/styles/stream.css
@@ -1,6 +1,6 @@
 /*Light*/
 /*Dark*/
-/* line 5, D:/work/dat/conduit/sass/stream.scss */
+/* line 6, D:/work/dat/conduit/sass/stream.scss */
 .stream {
   width: 100%;
   position: absolute;
@@ -18,32 +18,32 @@
   background: transparent;
 }
 
-/* line 21, D:/work/dat/conduit/sass/stream.scss */
+/* line 22, D:/work/dat/conduit/sass/stream.scss */
 .stream .card:last-child {
   border-radius: 0 0 2px 2px;
 }
 
-/* line 27, D:/work/dat/conduit/sass/stream.scss */
+/* line 28, D:/work/dat/conduit/sass/stream.scss */
 #article-stream {
   top: 0px;
 }
 
 /*Buttons at bottom of a stream*/
-/* line 35, D:/work/dat/conduit/sass/stream.scss */
+/* line 36, D:/work/dat/conduit/sass/stream.scss */
 .btn-group > .btn:first-child:not(:last-child):not(.dropdown-toggle) {
   border-top-right-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
 
-/* line 40, D:/work/dat/conduit/sass/stream.scss */
+/* line 41, D:/work/dat/conduit/sass/stream.scss */
 .btn-group > .btn:last-child:not(:first-child), .btn-group > .dropdown-toggle:not(:first-child) {
   border-top-left-radius: 0 !important;
   border-bottom-right-radius: 0 !important;
   border-bottom-left-radius: 0 !important;
 }
 
-/* line 46, D:/work/dat/conduit/sass/stream.scss */
+/* line 47, D:/work/dat/conduit/sass/stream.scss */
 .stream-action {
   width: 100%;
   position: absolute;
@@ -53,11 +53,11 @@
   right: 10px;
   border: none;
   border-radius: 2px 2px 0 0;
-  box-shadow: 0 0px 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   background-color: #009688;
 }
 
-/* line 59, D:/work/dat/conduit/sass/stream.scss */
+/* line 61, D:/work/dat/conduit/sass/stream.scss */
 .stream-action .btn-primary {
   border: none;
   border-bottom: 2px solid #009688;
@@ -66,13 +66,13 @@
   box-shadow: none;
 }
 
-/* line 67, D:/work/dat/conduit/sass/stream.scss */
+/* line 69, D:/work/dat/conduit/sass/stream.scss */
 .stream-action .btn-primary:active,
 .stream-action .btn-primary.active {
   color: #fff;
 }
 
-/* line 72, D:/work/dat/conduit/sass/stream.scss */
+/* line 74, D:/work/dat/conduit/sass/stream.scss */
 .stream-action .btn-primary:active,
 .stream-action .btn-primary.active,
 .stream-action .btn-primary:focus,
@@ -87,13 +87,13 @@
   box-shadow: none;
 }
 
-/* line 87, D:/work/dat/conduit/sass/stream.scss */
+/* line 89, D:/work/dat/conduit/sass/stream.scss */
 .stream-action .btn {
   height: 100%;
 }
 
 /*Feed*/
-/* line 95, D:/work/dat/conduit/sass/stream.scss */
+/* line 97, D:/work/dat/conduit/sass/stream.scss */
 .fluid-container {
   width: auto;
   position: absolute;
@@ -109,7 +109,7 @@
 }
 
 /*Book*/
-/* line 116, D:/work/dat/conduit/sass/stream.scss */
+/* line 118, D:/work/dat/conduit/sass/stream.scss */
 .book {
   width: auto;
   top: 90px;
@@ -119,7 +119,7 @@
   float: right;
 }
 
-/* line 128, D:/work/dat/conduit/sass/stream.scss */
+/* line 130, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper {
   position: absolute;
   top: 10px;
@@ -129,18 +129,18 @@
   height: 80px;
   display: inline-block;
   border-radius: 2px 2px 0 0;
-  box-shadow: 0 0px 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
   z-index: 100;
 }
 
-/* line 143, D:/work/dat/conduit/sass/stream.scss */
+/* line 146, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper .btn-primary {
   border: none;
   border-bottom: 2px solid #009688;
   box-shadow: none;
 }
 
-/* line 149, D:/work/dat/conduit/sass/stream.scss */
+/* line 152, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper .btn-primary:active,
 #book-action-wrapper .btn-primary.active,
 #book-action-wrapper .btn-primary:focus,
@@ -155,7 +155,7 @@
   box-shadow: none;
 }
 
-/* line 163, D:/work/dat/conduit/sass/stream.scss */
+/* line 166, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper .nya-bs-select {
   position: absolute;
   left: 0;
@@ -167,7 +167,7 @@
   box-shadow: none;
 }
 
-/* line 176, D:/work/dat/conduit/sass/stream.scss */
+/* line 179, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper nya-bs-select:active,
 #book-action-wrapper nya-bs-select.active,
 #book-action-wrapper nya-bs-select:focus,
@@ -182,7 +182,7 @@
   box-shadow: none;
 }
 
-/* line 190, D:/work/dat/conduit/sass/stream.scss */
+/* line 193, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper .stream-action {
   position: absolute;
   width: 48px;
@@ -195,7 +195,7 @@
   box-shadow: none;
 }
 
-/* line 202, D:/work/dat/conduit/sass/stream.scss */
+/* line 205, D:/work/dat/conduit/sass/stream.scss */
 #book-action-wrapper #team-info {
   background: #757575 !important;
   position: relative;
