--- a/sass/book-selector.scss
+++ b/sass/book-selector.scss
@@ -1,5 +1,6 @@
 
 @import "colors.scss";
+@import "material-shadow.scss";
 
 #right .btn.btn-default.dropdown-toggle {
     background-color: $colorPrimary500;
@@ -30,7 +31,8 @@
     background-color: #fff;
     border: none;
     border-radius: 2px;
-    box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+    // box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+    @include material-shadow(2);
     z-index: 101;
 }
 
