--- a/sass/card.scss
+++ b/sass/card.scss
@@ -1,6 +1,7 @@
 /*Article Card*/
 
 @import "colors.scss";
+@import "material-shadow.scss";
 
 $header-height:     1.250em;
 $title-line-height: 1.5em;
@@ -38,7 +39,8 @@ $card-spacing:      .313em;
 
     transition: all .25s ease-in-out !important;
     transition: box-shadow .25s ease-in-out;
-    box-shadow: 0 0px 2px rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
+    //box-shadow: 0 0px 2px rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
+    @include material-shadow(1);
     transition: margin .25s ease-in-out;
     margin: 0;
 }
@@ -59,7 +61,8 @@ $card-spacing:      .313em;
     .card:hover {
 	    background: darken($colorCardBackground, 5%);
         transition: box-shadow .25s ease-in-out;
-        box-shadow: 0 0px 4px 0 rgba(0,0,0,0.12), 0 4px 4px 0 rgba(0,0,0,0.24);
+        //box-shadow: 0 0px 4px 0 rgba(0,0,0,0.12), 0 4px 4px 0 rgba(0,0,0,0.24);
+        @include material-shadow(2);
         z-index: 98;
 		cursor: pointer;
 	}			
@@ -159,7 +162,8 @@ $card-spacing:      .313em;
     .card.active {        
         background: darken($colorCardBackground, 15%);
         transition: box-shadow .25s ease-in-out;
-        box-shadow: 0 0px 6px 0 rgba(0,0,0,0.12), 0 6px 6px 0 rgba(0,0,0,0.24);
+        //box-shadow: 0 0px 6px 0 rgba(0,0,0,0.12), 0 6px 6px 0 rgba(0,0,0,0.24);
+        @include material-shadow(3);
         transition: margin .25s ease-in-out;
         margin: 10px -5px 10px -5px;
         width: auto;
@@ -167,7 +171,7 @@ $card-spacing:      .313em;
 	}		
 	    .card.active:hover {
 			background: darken($colorCardBackground, 20%);
-            box-shadow: 0 0px 6px 0 rgba(0,0,0,0.12), 0 6px 6px 0 rgba(0,0,0,0.24);
+            //box-shadow: 0 0px 6px 0 rgba(0,0,0,0.12), 0 6px 6px 0 rgba(0,0,0,0.24);
             transition: margin .25s ease-in-out;
 		}
 
