--- a/sass/filter.scss
+++ b/sass/filter.scss
@@ -1,4 +1,5 @@
 @import "colors";
+@import "material-shadow.scss";
 
 $filterHeaderHeight: 24px;
 
@@ -25,7 +26,8 @@ $filterHeaderHeight: 24px;
 	left: 10px;
 	right: 10px;
 
-	box-shadow: 0 0px 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);
+	//box-shadow: 0 0px 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);
+	@include material-shadow(3);
 
 	.panel-group {
 		margin-bottom: 0px;
