--- a/sass/layout.scss
+++ b/sass/layout.scss
@@ -1,6 +1,7 @@
 /*Layout*/
 
 @import "colors.scss";
+@import "material-shadow.scss";
 
 $leftWidth: 25vw;
 $rightWidth: 20vw;
@@ -99,7 +100,8 @@ body {
 	font-size: 1.5em;
 	font-family: 'Montserrat', sans-serif;
 
-	box-shadow: 0 0px 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);									
+	//box-shadow: 0 0px 8px 0 rgba(0,0,0,0.12), 0 8px 8px 0 rgba(0,0,0,0.24);	
+	@include material-shadow(3);								
 }
 
     #header-content-wrapper:before {
@@ -188,7 +190,8 @@ body {
 	background-color: #fff;
 	border: none;
 	border-radius: 2px;
-	box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+	//box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+	@include material-shadow(2);
 	z-index: 101;
 }
 
