--- a/sass/page-card.scss
+++ b/sass/page-card.scss
@@ -1,4 +1,5 @@
 @import "colors.scss";
+@import "material-shadow.scss";
 
 * {
   -webkit-box-sizing: border-box;
@@ -22,18 +23,21 @@ body {
 	background-color: $colorBackground;
 }
 
+$tbPadding: 24px;
+$lrPadding: 24px;
 
 .card {	
 	
 	margin-top: 20vh;
 	height: auto;
 
-	padding: 24px 16px;
+	padding: $tbPadding $lrPadding;
 
 	border-radius: 2px;
 	/*border: 1px solid $colorGrey;*/
 	background: $colorCardBackground;
-	box-shadow: 0 0px 2px rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
+	//box-shadow: 0 0px 2px rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
+	@include material-shadow(1);
 }
 
 .card .primary-title {
@@ -48,7 +52,7 @@ body {
 
 .card .action-area {
 	height: 52px;
-	margin: 0 -16px -24px -16px;
+	margin: 0 (-$lrPadding) (-$tbPadding) (-$lrPadding);
 }
 
 .card .card-action {
