--- a/sass/viewer.scss
+++ b/sass/viewer.scss
@@ -1,6 +1,7 @@
 /*Article View*/
 
 @import "colors.scss";
+@import "material-shadow.scss";
 
 $lrpadding: 15px; /*does not apply to all elements*/
 
@@ -20,7 +21,8 @@ $actPadding: 8px;
 	border-radius: 2px;
 	/*border: 1px solid $colorGrey;*/
 	background: $colorCardBackground;
-	box-shadow: 0 0px 2px rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
+	//box-shadow: 0 0px 2px rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
+	@include material-shadow(1);
 }
 
 #content-wrapper {
@@ -119,7 +121,8 @@ $actPadding: 8px;
 		width: $nav-circle-size;
 		height: $nav-circle-size;
 		border-radius: $nav-circle-size / 2;
-		box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
+		//box-shadow: 0 0 2px 0 rgba(0,0,0,0.12), 0 2px 2px 0 rgba(0,0,0,0.24);
+		@include material-shadow(2);
 		transition: box-shadow .25s ease-in-out;
 
 		font-size: $nav-icon-size;
@@ -133,7 +136,8 @@ $actPadding: 8px;
 	#image-wrapper .nav-arrow:hover{
 		cursor: pointer;
 		background-color: $colorPrimary700;	
-		box-shadow: 0 0 4px 0 rgba(0,0,0,0.12), 0 4px 4px 0 rgba(0,0,0,0.24);
+		//box-shadow: 0 0 4px 0 rgba(0,0,0,0.12), 0 4px 4px 0 rgba(0,0,0,0.24);
+		@include material-shadow(2);
 		transition: box-shadow .25s ease-in-out;
 	}
 
@@ -251,7 +255,8 @@ $actPadding: 8px;
     background-color: #fff;
     border: none;
     border-radius: 2px;
-    box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+	//box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+	@include material-shadow(2);
     z-index: 101;
 }
 
@@ -409,7 +414,8 @@ $actPadding: 8px;
     background-color: #fff;
     border: none;
     border-radius: 2px;
-    box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+	//box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+	@include material-shadow(2);
     z-index: 101;
 }
 
