--- a/styles/book-selector.css
+++ b/styles/book-selector.css
@@ -1,6 +1,6 @@
 /*Light*/
 /*Dark*/
-/* line 4, D:/work/dat/conduit/sass/book-selector.scss */
+/* line 5, D:/work/dat/conduit/sass/book-selector.scss */
 #right .btn.btn-default.dropdown-toggle {
   background-color: #009688;
   color: white;
@@ -14,7 +14,7 @@
   z-index: 100;
 }
 
-/* line 22, D:/work/dat/conduit/sass/book-selector.scss */
+/* line 23, D:/work/dat/conduit/sass/book-selector.scss */
 #right .dropdown-menu.open {
   position: relative;
   top: -20px;
@@ -26,11 +26,11 @@
   background-color: #fff;
   border: none;
   border-radius: 2px;
-  box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   z-index: 101;
 }
 
-/* line 37, D:/work/dat/conduit/sass/book-selector.scss */
+/* line 39, D:/work/dat/conduit/sass/book-selector.scss */
 #right .nya-bs-select.btn-group .dropdown-menu {
   width: 100% !important;
   min-width: initial !important;
