--- a/styles/layout.css
+++ b/styles/layout.css
@@ -1,20 +1,20 @@
 /*Layout*/
 /*Light*/
 /*Dark*/
-/* line 12, D:/work/dat/conduit/sass/layout.scss */
+/* line 13, D:/work/dat/conduit/sass/layout.scss */
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-/* line 18, D:/work/dat/conduit/sass/layout.scss */
+/* line 19, D:/work/dat/conduit/sass/layout.scss */
 html {
   font-size: 100% !important;
   font-family: 'SourceSansPro', sans-serif !important;
 }
 
-/* line 23, D:/work/dat/conduit/sass/layout.scss */
+/* line 24, D:/work/dat/conduit/sass/layout.scss */
 body {
   min-width: 750px;
   /* 2x (LC fullwidth +
@@ -32,7 +32,7 @@ body {
   background-color: #f2f2f2;
 }
 
-/* line 41, D:/work/dat/conduit/sass/layout.scss */
+/* line 42, D:/work/dat/conduit/sass/layout.scss */
 #container {
   position: fixed;
   padding-left: 25vw;
@@ -45,7 +45,7 @@ body {
   background: transparent;
 }
 
-/* line 51, D:/work/dat/conduit/sass/layout.scss */
+/* line 52, D:/work/dat/conduit/sass/layout.scss */
 #container .column {
   position: relative;
   float: left;
@@ -53,7 +53,7 @@ body {
   background: inherit;
 }
 
-/* line 58, D:/work/dat/conduit/sass/layout.scss */
+/* line 59, D:/work/dat/conduit/sass/layout.scss */
 #center {
   padding: 0;
   /* CC padding */
@@ -62,7 +62,7 @@ body {
   float: left;
 }
 
-/* line 65, D:/work/dat/conduit/sass/layout.scss */
+/* line 66, D:/work/dat/conduit/sass/layout.scss */
 #left {
   width: 25vw;
   /* LC width */
@@ -76,7 +76,7 @@ body {
   display: inline-block;
 }
 
-/* line 76, D:/work/dat/conduit/sass/layout.scss */
+/* line 77, D:/work/dat/conduit/sass/layout.scss */
 #right {
   width: 20vw;
   /* RC width */
@@ -91,7 +91,7 @@ body {
   overflow-x: visible;
 }
 
-/* line 87, D:/work/dat/conduit/sass/layout.scss */
+/* line 88, D:/work/dat/conduit/sass/layout.scss */
 #header {
   /*DISPLAY*/
   float: left;
@@ -104,10 +104,10 @@ body {
   /*FONTS*/
   font-size: 1.5em;
   font-family: 'Montserrat', sans-serif;
-  box-shadow: 0 0px 8px 0 rgba(0, 0, 0, 0.12), 0 8px 8px 0 rgba(0, 0, 0, 0.24);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
-/* line 105, D:/work/dat/conduit/sass/layout.scss */
+/* line 107, D:/work/dat/conduit/sass/layout.scss */
 #header-content-wrapper:before {
   content: '';
   display: inline-block;
@@ -116,7 +116,7 @@ body {
   margin-right: -0.25em;
 }
 
-/* line 113, D:/work/dat/conduit/sass/layout.scss */
+/* line 115, D:/work/dat/conduit/sass/layout.scss */
 #header-content-wrapper {
   display: inline-block;
   vertical-align: middle;
@@ -125,30 +125,30 @@ body {
   text-align: center;
 }
 
-/* line 121, D:/work/dat/conduit/sass/layout.scss */
+/* line 123, D:/work/dat/conduit/sass/layout.scss */
 #header-content {
   display: inline-block;
   vertical-align: middle;
 }
 
 /*** IE Fix ***/
-/* line 127, D:/work/dat/conduit/sass/layout.scss */
+/* line 129, D:/work/dat/conduit/sass/layout.scss */
 * html #left {
   left: 390px;
   /* RC fullwidth */
 }
 
-/* line 131, D:/work/dat/conduit/sass/layout.scss */
+/* line 133, D:/work/dat/conduit/sass/layout.scss */
 #menu .caret {
   visibility: hidden;
 }
 
-/* line 135, D:/work/dat/conduit/sass/layout.scss */
+/* line 137, D:/work/dat/conduit/sass/layout.scss */
 #menu .special-title {
   visibility: hidden;
 }
 
-/* line 139, D:/work/dat/conduit/sass/layout.scss */
+/* line 141, D:/work/dat/conduit/sass/layout.scss */
 #menu .btn.btn-default.dropdown-toggle:after {
   font-family: "Glyphicons Halflings";
   content: "\e236";
@@ -159,7 +159,7 @@ body {
   top: 3px;
 }
 
-/* line 150, D:/work/dat/conduit/sass/layout.scss */
+/* line 152, D:/work/dat/conduit/sass/layout.scss */
 #menu .btn.btn-default.dropdown-toggle {
   position: absolute;
   left: 10px;
@@ -177,20 +177,20 @@ body {
   box-shadow: none;
 }
 
-/* line 167, D:/work/dat/conduit/sass/layout.scss */
+/* line 169, D:/work/dat/conduit/sass/layout.scss */
 #menu .btn.btn-default.dropdown-toggle:hover {
   cursor: pointer;
   background-color: #007d71;
 }
 
-/* line 174, D:/work/dat/conduit/sass/layout.scss */
+/* line 176, D:/work/dat/conduit/sass/layout.scss */
 #menu .btn.btn-default.dropdown-toggle:active,
 #menu .btn.btn-default.dropdown-toggle:focus {
   cursor: pointer;
   background-color: #00635a;
 }
 
-/* line 180, D:/work/dat/conduit/sass/layout.scss */
+/* line 182, D:/work/dat/conduit/sass/layout.scss */
 #menu .dropdown-menu.open {
   position: relative;
   top: 30px;
@@ -202,17 +202,17 @@ body {
   background-color: #fff;
   border: none;
   border-radius: 2px;
-  box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   z-index: 101;
 }
 
-/* line 195, D:/work/dat/conduit/sass/layout.scss */
+/* line 198, D:/work/dat/conduit/sass/layout.scss */
 #menu .dropdown-menu > li > div {
   padding: 3px 20px;
   color: #bdbdbd;
 }
 
-/* line 200, D:/work/dat/conduit/sass/layout.scss */
+/* line 203, D:/work/dat/conduit/sass/layout.scss */
 #header-content-wrapper .form-control {
   box-shadow: none;
   -webkit-box-shadow: none;
@@ -222,7 +222,7 @@ body {
   background-color: transparent;
 }
 
-/* line 209, D:/work/dat/conduit/sass/layout.scss */
+/* line 212, D:/work/dat/conduit/sass/layout.scss */
 #righoverflow-menut .nya-bs-select.btn-group .dropdown-menu {
   width: 100% !important;
   min-width: initial !important;
