--- a/styles/viewer.css
+++ b/styles/viewer.css
@@ -2,7 +2,7 @@
 /*Light*/
 /*Dark*/
 /*does not apply to all elements*/
-/* line 10, D:/work/dat/conduit/sass/viewer.scss */
+/* line 11, D:/work/dat/conduit/sass/viewer.scss */
 .article-view {
   position: absolute;
   top: 10px;
@@ -14,10 +14,10 @@
   border-radius: 2px;
   /*border: 1px solid $colorGrey;*/
   background: #fff;
-  box-shadow: 0 0px 2px rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
-/* line 26, D:/work/dat/conduit/sass/viewer.scss */
+/* line 28, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper {
   position: absolute;
   top: 0;
@@ -27,7 +27,7 @@
   overflow-y: auto;
 }
 
-/* line 35, D:/work/dat/conduit/sass/viewer.scss */
+/* line 37, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #subject {
   color: #bdbdbd;
   font-size: 12px;
@@ -38,7 +38,7 @@
   text-align: center;
 }
 
-/* line 45, D:/work/dat/conduit/sass/viewer.scss */
+/* line 47, D:/work/dat/conduit/sass/viewer.scss */
 .btn-edit {
   visibility: visible;
   color: #212121;
@@ -47,38 +47,38 @@
   clear: both;
 }
 
-/* line 52, D:/work/dat/conduit/sass/viewer.scss */
+/* line 54, D:/work/dat/conduit/sass/viewer.scss */
 .btn-edit:hover {
   background-color: #d1d1d1;
 }
 
-/* line 56, D:/work/dat/conduit/sass/viewer.scss */
+/* line 58, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text.edit-field {
   padding: 15px;
   height: 24em;
   margin-top: 5em;
 }
 
-/* line 62, D:/work/dat/conduit/sass/viewer.scss */
+/* line 64, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #title-wrapper {
   position: relative;
   margin-top: 8px;
   margin: 0 15px;
 }
 
-/* line 69, D:/work/dat/conduit/sass/viewer.scss */
+/* line 71, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .title {
   font-size: 1.5em;
   font-family: 'Montserrat', sans-serif;
 }
 
-/* line 74, D:/work/dat/conduit/sass/viewer.scss */
+/* line 76, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #title-wrapper .edit-field {
   line-height: 1.813em;
   height: 6em;
 }
 
-/* line 79, D:/work/dat/conduit/sass/viewer.scss */
+/* line 81, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper {
   position: relative;
   width: 100%;
@@ -90,7 +90,7 @@
   clear: both;
 }
 
-/* line 89, D:/work/dat/conduit/sass/viewer.scss */
+/* line 91, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper #nav-right {
   position: absolute;
   top: 50%;
@@ -99,7 +99,7 @@
   z-index: 100;
 }
 
-/* line 96, D:/work/dat/conduit/sass/viewer.scss */
+/* line 98, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper #nav-left {
   position: absolute;
   top: 50%;
@@ -108,7 +108,7 @@
   z-index: 100;
 }
 
-/* line 105, D:/work/dat/conduit/sass/viewer.scss */
+/* line 107, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper::before {
   content: '';
   display: inline-block;
@@ -117,13 +117,13 @@
   margin-right: -0.25em;
 }
 
-/* line 113, D:/work/dat/conduit/sass/viewer.scss */
+/* line 115, D:/work/dat/conduit/sass/viewer.scss */
 #image-wrapper .nav-arrow {
   background-color: #009688;
   width: 2.5em;
   height: 2.5em;
   border-radius: 1.25em;
-  box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   transition: box-shadow .25s ease-in-out;
   font-size: 0.75em;
   color: #fff;
@@ -133,20 +133,20 @@
   vertical-align: middle;
 }
 
-/* line 133, D:/work/dat/conduit/sass/viewer.scss */
+/* line 136, D:/work/dat/conduit/sass/viewer.scss */
 #image-wrapper .nav-arrow:hover {
   cursor: pointer;
   background-color: #00796b;
-  box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.12), 0 4px 4px 0 rgba(0, 0, 0, 0.24);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   transition: box-shadow .25s ease-in-out;
 }
 
-/* line 140, D:/work/dat/conduit/sass/viewer.scss */
+/* line 144, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-wrapper .greyout {
   visibility: hidden;
 }
 
-/* line 144, D:/work/dat/conduit/sass/viewer.scss */
+/* line 148, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .article-image {
   display: inline-block;
   margin: auto;
@@ -154,26 +154,26 @@
   text-align: center;
 }
 
-/* line 151, D:/work/dat/conduit/sass/viewer.scss */
+/* line 155, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .article-image .image {
   width: 100%;
   max-height: 50vh;
   vertical-align: middle;
 }
 
-/* line 157, D:/work/dat/conduit/sass/viewer.scss */
+/* line 161, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #image-load-error {
   color: #ff5252;
 }
 
-/* line 161, D:/work/dat/conduit/sass/viewer.scss */
+/* line 165, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text-wrapper {
   margin: 0 15px 15px 15px;
   position: relative;
   top: 30px;
 }
 
-/* line 167, D:/work/dat/conduit/sass/viewer.scss */
+/* line 171, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .text {
   display: block;
   font-size: 1.125em;
@@ -182,19 +182,19 @@
   white-space: pre-line;
 }
 
-/* line 175, D:/work/dat/conduit/sass/viewer.scss */
+/* line 179, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .edit-field {
   padding: 0 1vw;
   width: 100%;
 }
 
-/* line 180, D:/work/dat/conduit/sass/viewer.scss */
+/* line 184, D:/work/dat/conduit/sass/viewer.scss */
 .article-view .editable-buttons {
   float: right;
   margin: 5px 0 75px 0;
 }
 
-/* line 185, D:/work/dat/conduit/sass/viewer.scss */
+/* line 189, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #id {
   color: #bdbdbd;
   font-size: 14px;
@@ -204,12 +204,12 @@
   bottom: 15px;
 }
 
-/* line 192, D:/work/dat/conduit/sass/viewer.scss */
+/* line 196, D:/work/dat/conduit/sass/viewer.scss */
 .article-view #id a {
   color: #bdbdbd;
 }
 
-/* line 199, D:/work/dat/conduit/sass/viewer.scss */
+/* line 203, D:/work/dat/conduit/sass/viewer.scss */
 #action-area {
   position: absolute;
   right: 0;
@@ -221,7 +221,7 @@
   display: inline-block;
 }
 
-/* line 212, D:/work/dat/conduit/sass/viewer.scss */
+/* line 216, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn {
   height: 36px;
   background: transparent;
@@ -231,23 +231,23 @@
   font-weight: 700;
 }
 
-/* line 222, D:/work/dat/conduit/sass/viewer.scss */
+/* line 226, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-default {
   color: #212121;
 }
 
-/* line 226, D:/work/dat/conduit/sass/viewer.scss */
+/* line 230, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-default:hover,
 #action-area .btn-default:focus {
   background: rgba(33, 33, 33, 0.12);
 }
 
-/* line 231, D:/work/dat/conduit/sass/viewer.scss */
+/* line 235, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-primary {
   color: #009688;
 }
 
-/* line 235, D:/work/dat/conduit/sass/viewer.scss */
+/* line 239, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-primary:hover,
 #action-area .btn-primary:focus,
 #action-area .btn-primary:active,
@@ -256,7 +256,7 @@
   box-shadow: none;
 }
 
-/* line 243, D:/work/dat/conduit/sass/viewer.scss */
+/* line 247, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .dropdown-menu.open {
   position: relative;
   top: -350%;
@@ -268,11 +268,11 @@
   background-color: #fff;
   border: none;
   border-radius: 2px;
-  box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   z-index: 101;
 }
 
-/* line 258, D:/work/dat/conduit/sass/viewer.scss */
+/* line 263, D:/work/dat/conduit/sass/viewer.scss */
 #action-area .btn-group.open .dropdown-toggle {
   width: 100% !important;
   min-width: initial !important;
@@ -280,46 +280,46 @@
   background: rgba(0, 150, 136, 0.12);
 }
 
-/* line 265, D:/work/dat/conduit/sass/viewer.scss */
+/* line 270, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation {
   position: absolute;
   left: 15px;
   bottom: 7px;
 }
 
-/* line 270, D:/work/dat/conduit/sass/viewer.scss */
+/* line 275, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation .pagination {
   margin: 0;
 }
 
-/* line 274, D:/work/dat/conduit/sass/viewer.scss */
+/* line 279, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation .pagination > .disabled > a {
   color: #bdbdbd;
 }
 
-/* line 278, D:/work/dat/conduit/sass/viewer.scss */
+/* line 283, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation .pagination-sm > li:first-child > a {
   width: auto !important;
   padding: 0px 5px !important;
 }
 
-/* line 282, D:/work/dat/conduit/sass/viewer.scss */
+/* line 287, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation .pagination-sm > li:first-child > a:hover {
   border-radius: 2px;
 }
 
-/* line 286, D:/work/dat/conduit/sass/viewer.scss */
+/* line 291, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation .pagination-sm > li:last-child > a {
   width: auto !important;
   padding: 0px 5px !important;
 }
 
-/* line 290, D:/work/dat/conduit/sass/viewer.scss */
+/* line 295, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation .pagination-sm > li:last-child > a:hover {
   border-radius: 2px;
 }
 
-/* line 296, D:/work/dat/conduit/sass/viewer.scss */
+/* line 301, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation .pagination > li > a {
   width: 2em;
   height: 2em;
@@ -332,7 +332,7 @@
   color: #009688;
 }
 
-/* line 310, D:/work/dat/conduit/sass/viewer.scss */
+/* line 315, D:/work/dat/conduit/sass/viewer.scss */
 #action-area #version-pagniation .pagination > .active > a {
   width: 2em;
   height: 2em;
@@ -362,7 +362,7 @@
 #overflow-menu:hover {
 	background: lighten($colorGrey, 20%);
 }*/
-/* line 344, D:/work/dat/conduit/sass/viewer.scss */
+/* line 349, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-btn {
   position: absolute;
   top: 10px;
@@ -379,19 +379,19 @@
   vertical-align: middle;
 }
 
-/* line 360, D:/work/dat/conduit/sass/viewer.scss */
+/* line 365, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .caret {
   visibility: hidden;
 }
 
-/* line 364, D:/work/dat/conduit/sass/viewer.scss */
+/* line 369, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:after {
   font-family: "Glyphicons Halflings";
   content: '\e235';
   margin-left: -.25em;
 }
 
-/* line 370, D:/work/dat/conduit/sass/viewer.scss */
+/* line 375, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle {
   position: absolute;
   top: 10px;
@@ -411,20 +411,20 @@
   box-shadow: none;
 }
 
-/* line 390, D:/work/dat/conduit/sass/viewer.scss */
+/* line 395, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:hover {
   cursor: pointer;
   background-color: #f0f0f0;
 }
 
-/* line 395, D:/work/dat/conduit/sass/viewer.scss */
+/* line 400, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .btn.btn-default.dropdown-toggle:active,
 #overflow-menu .btn.btn-default.dropdown-toggle:focus {
   cursor: pointer;
   background-color: #e3e3e3;
 }
 
-/* line 401, D:/work/dat/conduit/sass/viewer.scss */
+/* line 406, D:/work/dat/conduit/sass/viewer.scss */
 #overflow-menu .dropdown-menu.open {
   position: relative;
   top: 30px;
@@ -436,7 +436,7 @@
   background-color: #fff;
   border: none;
   border-radius: 2px;
-  box-shadow: 0 0px 2px 0 rgba(0, 0, 0, 0.12), 0 2px 2px 0 rgba(0, 0, 0, 0.24);
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   z-index: 101;
 }
 
@@ -444,7 +444,7 @@
     width: 100% !important;
     min-width: initial !important;
 }*/
-/* line 421, D:/work/dat/conduit/sass/viewer.scss */
+/* line 427, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper .form-control {
   box-shadow: none;
   -webkit-box-shadow: none;
@@ -454,7 +454,7 @@
   right: 0;
 }
 
-/* line 430, D:/work/dat/conduit/sass/viewer.scss */
+/* line 436, D:/work/dat/conduit/sass/viewer.scss */
 #content-wrapper .edit-field.form-control {
   width: 100% !important;
 }
