invalid property type

--- a/sass/filter.scss
+++ b/sass/filter.scss
@@ -6,7 +6,7 @@ $filterHeaderHeight: 24px;
 .category-wrapper {
 	display: inline-block;
 	width: 100%;
-	overflow: show;
+	overflow: visible;
 	clear: both;
 }
 	
