Fixed sass sonar bugs

--- a/sass/stream.scss
+++ b/sass/stream.scss
@@ -62,7 +62,7 @@ $tMargin: 10px;
 		border: none;
 		border-bottom: 2px solid $colorPrimary;
 		color: rgba($colorPrimaryContrast, .7);
-		border-radius: none;
+		border-radius: 0;
 		box-shadow: none;
 	}
 
